Fix chat area overflow

--- a/style.css
+++ b/style.css
@@ -54,8 +54,9 @@ input[type="submit"] {
 }
 
 #chat {
-    margin-top: 50px;
+    margin: 50px 0px 75px 0px;
     width: 75%;
+    overflow-y: scroll;
 }
 
 .wrapper {
